<resources>
    <string name="app_name">Klusta</string>
    <string name="title_activity_local_tree_select">Local Tree Select</string>
    <string name="title_activity_main">Klusta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Klusta</string>
    <string name="nav_header_subtitle">gediminas.milasius@ktu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="recent">Recent</string>
    <string name="import_">Import</string>
    <string name="configuration">Configuration</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_modify">Tree Editor</string>
    <string name="enter_description_text_here">Enter description text here</string>
    <string name="big_text">Big Text</string>
    <string name="enter_header_text_here">Enter header text here</string>
    <string name="finish">Exit</string>
    <string name="title_activity_swiper"></string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="for_yes"><![CDATA[For yes ->]]></string>
    <string name="for_no"><![CDATA[<- For no]]></string>
    <string name="optional_image">Optional Image</string>
    <string name="_10_00_eur">10.00 €</string>
    <string name="_5_00_eur">5.00 €</string>
    <string name="_3_00_eur">3.00 €</string>
    <string name="_2_00_eur">2.00 €</string>
    <string name="_1_00_eur">1.00 €</string>
    <string name="donate_text">Show your appreciation and support the development of this app by donating</string>
    <string name="support">Support</string>
    <string name="donate">Donate</string>
    <string name="create">Create</string>
    <string name="tree_name">New tree</string>
    <string name="name_of_the_tree">Name of the tree</string>
    <string name="edit_tree_contents">Edit tree contents</string>
    <string name="clear_all_entries">Clear all entries</string>
    <string name="commit">Commit</string>
    <string name="dialog_confirm_delete">Are you sure you wish to delete this tree?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm_exit_nochanges">Would you like to save changes?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="at_root_of_tree">You are already at the root of the tree.</string>
    <string name="at_end_of_tree">You have reached the end of the tree.</string>
    <string name="text_copied">Tree was copied to your clipboard.</string>
</resources>
