<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_recent"
            android:checkable="true"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/import_export" />

    </group>

    <item
        android:checkable="false"
        android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferences" />
        </menu>
    </item>
</menu>
